--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     },
     "devDependencies": {
         "axios": "^1.1.2",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.2",
+        "tailwindcss": "^3.2.7",
         "vite": "^4.0.0"
     }
 }
